# ghlvibes

./: .dockerignore  .gitignore  .mcp.json  ACTION_SYSTEM_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TESTING_REPORT.md  CONTRIBUTING.md  CRM_FRONTEND_SUMMARY.md  CRM_IMPLEMENTATION_REPORT.md  DDD_IMPLEMENTATION_REPORT.md  DDD_IMPLEMENTATION_REPORT_SPEC_FRN_001.md  DDD_IMPLEMENTATION_REPORT_SPEC_WFL_005.md  DDD_IMPLEMENTATION_REPORT_SPEC_WFL_009.md  DDD_IMPLEMENTATION_SUMMARY.md  DDD_SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  FINAL_REPORT.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_PHASES_4_7_IMPLEMENTATION_SUMMARY.md  FUNNELS_BACKEND_IMPLEMENTATION_REPORT.md  FUNNELS_QUICK_START.md  IMPLEMENTATION_REPORT_SPEC_WFL_003.md  INFRASTRUCTURE.md  INFRASTRUCTURE_SETUP_COMPLETE.md  INFRASTRUCTURE_SUMMARY.txt  MONITORING.md  PROGRESS_TRACKING.md  README.md  SLACK_SETUP.md  SPEC-WFL-007-EXECUTIVE-SUMMARY.md  SPEC-WFL-007-IMPLEMENTATION-REPORT.md  SPEC-WFL-007-QUICK-REFERENCE.md  TEST.md  TESTING_SUMMARY.txt  USER_MANUAL.md  VALIDATION_CHECKLIST.md  WIKI.md  (+7 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2025_01_26_001_create_goal_tracking.py  20260126_000001_initial_workflow_schema.py  20260126_000002_add_trigger_tables.py  20260205_000003_add_action_tables.py  20260206_000004_add_template_tables.py  20260206_000005_add_bulk_enrollment_tables.py  20260206_add_wait_step_tables.py  20260206_create_workflow_versions.py
backend/src/: __init__.py  main.py
backend/src/api/: health.py
backend/src/calendars/: __init__.py
backend/src/calendars/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
backend/src/core/: __init__.py  config.py  database.py  dependencies.py  domain.py
backend/src/crm/: README.md  __init__.py
backend/src/crm/application/: __init__.py  dtos.py
backend/src/crm/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
backend/src/crm/infrastructure/: __init__.py  models.py
backend/src/crm/presentation/: __init__.py  dependencies.py  middleware.py  routes.py
backend/src/funnels/domain/: value_objects.py
backend/src/funnels/infrastructure/: models.py
backend/src/funnels_integrations/infrastructure/: models.py
backend/src/funnels_orders/domain/: value_objects.py
backend/src/funnels_orders/infrastructure/: models.py
backend/src/funnels_pages/domain/: value_objects.py
backend/src/funnels_pages/infrastructure/: models.py
backend/src/workflows/: __init__.py
backend/src/workflows/application/: __init__.py  action_dtos.py  action_executor.py  analytics_aggregation_service.py  analytics_dtos.py  bulk_enrollment_dtos.py  condition_dtos.py  dtos.py  enhanced_webhook_executor.py  execution_service.py  goal_detection_service.py  goal_dtos.py  retry_service.py  template_dtos.py  version_dtos.py  wait_service.py
backend/tests/: __init__.py  conftest.py  conftest_extended.py
backend/tests/crm/: conftest.py
backend/tests/factories/: __init__.py
backend/tests/funnels/: test_funnel.py
backend/tests/integration/: test_workflow_api_comprehensive.py
backend/tests/performance/: test_performance_comprehensive.py
backend/tests/security/: test_security_comprehensive.py
backend/tests/workflows/: __init__.py  conftest.py  test_bulk_enrollment_use_cases.py  test_template_use_cases.py
docs/: INDEX.md  (+1 more)
(+429 files in other folders)
